--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </a>
               </li>
               <li class="menu__item">
-                <a class="menu__link anim-text anim-text--orange" href="#">
+                <a class="menu__link anim-text anim-text--orange" href="catalog.html">
                   Каталог товаров
                 </a>
               </li>
@@ -168,7 +168,7 @@
               <button class="top__btn top__btn--long btn" type="button">
                 Записаться на тест-драйв
               </button>
-              <a class="top__btn top__btn--small btn btn--two" href="#">
+              <a class="top__btn top__btn--small btn btn--two" href="catalog.html">
                 В каталог
               </a>
             </div>
@@ -307,7 +307,7 @@
             </a>
           </li>
           <li class="main-catalog__item anim-bg">
-            <a class="main-catalog__link" href="#">
+            <a class="main-catalog__link" href="catalog.html">
               <span class="main-catalog__text main-catalog__text--two">
                 Смотреть каталог
                 <svg><use xlink:href="img/sprite/sprite.svg#arrow-right"></use></svg>
